--- a/extracurricular/extracurricular.html
+++ b/extracurricular/extracurricular.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Extracurricular | Tiffany's Online Résumé</title>
-    <link rel="stylesheet" href="/Users/tiffanychen/Documents/FALL2024/cs391/mp-1/extracurricular/extracurricular.css"> <!-- Link to CSS file -->
+    <link rel="stylesheet" href="/Users/tiffanychen/Documents/mp-1/extracurricular/extracurricular.css"> <!-- Link to CSS file -->
     <!-- Embedded Google font-->
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
@@ -17,12 +17,12 @@
 
 <nav>
     <ul>
-        <li><a href="/Users/tiffanychen/Documents/FALL2024/cs391/mp-1/home/index.html">Home</a></li>
-        <li><a href="/Users/tiffanychen/Documents/FALL2024/cs391/mp-1/education/education.html">Education</a></li>
-        <li><a href="/Users/tiffanychen/Documents/FALL2024/cs391/mp-1/employment/employment.html">Work Experience</a></li>
-        <li><a href="/Users/tiffanychen/Documents/FALL2024/cs391/mp-1/reference/reference.html">References</a></li>
-        <li><a href="/Users/tiffanychen/Documents/FALL2024/cs391/mp-1/project/project.html">Project</a></li>
-        <li><a href="/Users/tiffanychen/Documents/FALL2024/cs391/mp-1/extracurricular/extracurricular.html" class="active">Extracurricular</a></li>
+        <li><a href="/Users/tiffanychen/Documents/mp-1/index.html">Home</a></li>
+        <li><a href="/Users/tiffanychen/Documents/mp-1/education/education.html">Education</a></li>
+        <li><a href="/Users/tiffanychen/Documents/mp-1/employment/employment.html">Work Experience</a></li>
+        <li><a href="/Users/tiffanychen/Documents/mp-1/reference/reference.html">References</a></li>
+        <li><a href="/Users/tiffanychen/Documents/mp-1/project/project.html">Project</a></li>
+        <li><a href="/Users/tiffanychen/Documents/mp-1/extracurricular/extracurricular.html" class="active">Extracurricular</a></li>
     </ul>
 </nav>
 
@@ -62,9 +62,9 @@
 
 
 <footer>
-    <p>&copy; 2024 Tiffany Chen | <a href="/Users/tiffanychen/Documents/FALL2024/cs391/mp-1/credits/credits.html">All Rights Reserved</a></p>
+    <p>&copy; 2024 Tiffany Chen | <a href="/Users/tiffanychen/Documents/mp-1/credits/credits.html">All Rights Reserved</a></p>
 </footer>
 
-<script src="/Users/tiffanychen/Documents/FALL2024/cs391/mp-1/extracurricular/extracurricular.js"></script> <!-- Link to JavaScript file -->
+<script src="extracurricular.js"></script> <!-- Link to JavaScript file -->
 </body>
 </html>
