Fixed file paths

--- a/education.html
+++ b/education.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education | Tiffany's Online Résumé</title>
-    <link rel="stylesheet" href="/Users/tiffanychen/Documents/mp-1/education.css"> <!-- Link to CSS file -->
+    <link rel="stylesheet" href="education.css"> <!-- Link to CSS file -->
     <!-- Embedded Google font-->
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
@@ -17,19 +17,19 @@
 
 <nav>
     <ul>
-        <li><a href="/Users/tiffanychen/Documents/mp-1/index.html">Home</a></li>
-        <li><a href="/Users/tiffanychen/Documents/mp-1/education.html" class="active">Education</a></li>
-        <li><a href="/Users/tiffanychen/Documents/mp-1/employment.html">Work Experience</a></li>
-        <li><a href="/Users/tiffanychen/Documents/mp-1/reference.html">References</a></li>
-        <li><a href="/Users/tiffanychen/Documents/mp-1/project.html">Project</a></li>
-        <li><a href="/Users/tiffanychen/Documents/mp-1/extracurricular.html">Extracurricular</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="education.html" class="active">Education</a></li>
+        <li><a href="employment.html">Work Experience</a></li>
+        <li><a href="reference.html">References</a></li>
+        <li><a href="project.html">Project</a></li>
+        <li><a href="extracurricular.html">Extracurricular</a></li>
     </ul>
 </nav>
 
 <main>
     <!-- Boston University Section -->
     <section class="school">
-        <img src="/Users/tiffanychen/Documents/mp-1/src/bu_logo.jpg" alt="Boston University Logo" class="school-logo">
+        <img src="src/bu_logo.jpg" alt="Boston University Logo" class="school-logo">
         <div class="school-info"> 
             <h2>Boston University</h2>
             <p><strong>Degree:</strong> Bachelor of Arts in Computer Science</p>
@@ -40,7 +40,7 @@
 
     <!-- Brooklyn Technical High School Section -->
     <section class="school">
-        <img src="/Users/tiffanychen/Documents/mp-1/src/bths_logo.JPG" alt="BTHS Logo" class="school-logo">
+        <img src="src/bths_logo.JPG" alt="BTHS Logo" class="school-logo">
         <div class="school-info">
             <h2>Brooklyn Technical High School</h2>
             <p><strong>Diploma:</strong> High School Diploma (Biological Sciences Major)</p>
@@ -51,7 +51,7 @@
 
 
 <footer>
-    <p>&copy; 2024 Tiffany Chen | <a href="/Users/tiffanychen/Documents/mp-1/credits.html">All Rights Reserved</a></p>
+    <p>&copy; 2024 Tiffany Chen | <a href="credits.html">All Rights Reserved</a></p>
 </footer>
 
 <script src="education.js"></script> <!-- Link to JavaScript file -->
