--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
 
     <nav>
         <ul>
-            <li><a href="/Users/tiffanychen/Documents/mp-1/index.html" class="active">Home</a></li>               <!-- links to the internal pages -->
-            <li><a href="/Users/tiffanychen/Documents/mp-1/education.html">Education</a></li>
-            <li><a href="/Users/tiffanychen/Documents/mp-1/employment.html">Work Experience</a></li>
-            <li><a href="/Users/tiffanychen/Documents/mp-1/reference.html">References</a></li>
-            <li><a href="/Users/tiffanychen/Documents/mp-1/project.html">Project</a></li>
-            <li><a href="/Users/tiffanychen/Documents/mp-1/extracurricular.html">Extracurricular</a></li>
+            <li><a href="index.html" class="active">Home</a></li>               <!-- links to the internal pages -->
+            <li><a href="education.html">Education</a></li>
+            <li><a href="employment.html">Work Experience</a></li>
+            <li><a href="reference.html">References</a></li>
+            <li><a href="project.html">Project</a></li>
+            <li><a href="extracurricular.html">Extracurricular</a></li>
         </ul>
     </nav>
 
     <main>
         <h2>About Me</h2>
         <p>Welcome to my online resume! My name is Tiffany Chen. I'm currently a computer science student at Boston University. Here, you will find details about my educational background, professional experiences, interests, and projects. </p>
-        <img src="/Users/tiffanychen/Documents/mp-1/src/IMG_3119_Original.jpg" alt="my picture" id="image">
+        <img src="src/IMG_3119_Original.jpg" alt="my picture" id="image">
     </main>
 
 
     <footer>
-        <p>&copy; 2024 Tiffany Chen | <a href="/Users/tiffanychen/cs391/mp-1/credits.html">All Rights Reserved</a></p>
+        <p>&copy; 2024 Tiffany Chen | <a href="credits.html">All Rights Reserved</a></p>
     </footer>
 
     <script src="home.js"></script> <!-- Link to JavaScript file -->
