--- a/project.html
+++ b/project.html
@@ -18,12 +18,12 @@
 
 <nav>
     <ul>
-        <li><a href="/Users/tiffanychen/Documents/mp-1/index.html">Home</a></li>
-        <li><a href="/Users/tiffanychen/Documents/mp-1/education.html">Education</a></li>
-        <li><a href="/Users/tiffanychen/Documents/mp-1/employment.html">Work Experience</a></li>
-        <li><a href="/Users/tiffanychen/Documents/mp-1/reference.html">References</a></li>
-        <li><a href="/Users/tiffanychen/Documents/mp-1/project.html"class="active">Project</a></li>
-        <li><a href="/Users/tiffanychen/Documents/mp-1/extracurricular.html">Extracurricular</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="employment.html">Work Experience</a></li>
+        <li><a href="reference.html">References</a></li>
+        <li><a href="project.html"class="active">Project</a></li>
+        <li><a href="extracurricular.html">Extracurricular</a></li>
     </ul>
 </nav>
 
@@ -81,7 +81,7 @@
 </main>
 
 <footer>
-    <p>&copy; 2024 Tiffany Chen | <a href="/Users/tiffanychen/Documents/mp-1/credits.html">All Rights Reserved</a></p>
+    <p>&copy; 2024 Tiffany Chen | <a href="credits.html">All Rights Reserved</a></p>
 </footer>
 
 <script src="project.js"></script> <!-- Link to JavaScript file -->
